--- a/index.html
+++ b/index.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
-        <div class="logo">Header Logo</div>
         
-        <ul class="links">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
+        <div id="top-half">
+            <div class="logo">Header Logo</div>
+        
+            <ul class="links">
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
 
-        <div class="title">This Website is Awesome</div>
-        <div class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum veniam veritatis quae quam nostrum molestiae enim ad temporibus iure fuga, tenetur, maiores ex, officiis repudiandae atque explicabo amet? Similique, impedit!</div>
-        <div class="buttons"><button>Sign Up</button></div>
+        <div class="description">
+            <div class="title">This Website is Awesome</div>
+            <div class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum veniam veritatis quae quam nostrum molestiae enim ad temporibus iure fuga, tenetur, maiores ex, officiis repudiandae atque explicabo amet? Similique, impedit!</div>
+            <div class="buttons"><button>Sign Up</button></div>
+        </div>
 
-        <img src="">
+        <img src="logo.png">
     </div>
 </body>
 </html>
