--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="buttons"><button>Sign Up</button></div>
         </div>
 
-        <img src="logo.png">
+        <img src="">
     </div>
 </body>
 </html>
