--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div class="header">
-        
         <div id="top-half">
             <div class="logo">Header Logo</div>
         
@@ -19,13 +18,15 @@
             </ul>
         </div>
 
-        <div class="description">
-            <div class="title">This Website is Awesome</div>
-            <div class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum veniam veritatis quae quam nostrum molestiae enim ad temporibus iure fuga, tenetur, maiores ex, officiis repudiandae atque explicabo amet? Similique, impedit!</div>
-            <div class="buttons"><button>Sign Up</button></div>
-        </div>
+        <div class="header-content">
+            <div class="description">
+                <div class="title">This Website is Awesome</div>
+                <div class="subtext">This website has some subtect that goes here under the main title. It's a smaller font and the color is in lower contrast.</div>
+                <div class="buttons"><button id="button-1">Sign Up</button></div>
+            </div>
 
-        <img src="logo.png">
+            <img src="logo.png">
+        </div>
     </div>
 </body>
 </html>
