Started 2nd Part of the website. Added main information and some styling.

--- a/index.html
+++ b/index.html
@@ -28,5 +28,31 @@
             <img src="logo.png">
         </div>
     </div>
+
+    <div id="top-mid">
+        <div class="heading">Some Random Information</div>
+        
+        <div class="content">
+            <div class="pics">
+                <img src="barberry.png" class="stock">
+                <img src="chilli.png" class="stock">
+                <img src="pepper.png" class="stock">
+                <img src="saffron.png" class="stock">
+                <div class="text">This some subtext under an illustration or image</div>
+                <div class="text">This some subtext under an illustration or image</div>
+                <div class="text">This some subtext under an illustration or image</div>
+                <div class="text">This some subtext under an illustration or image</div>
+            </div>
+
+       <!--
+            <div class="info">
+                <div class="text">This some subtext under an illustration or image</div>
+                <div class="text">This some subtext under an illustration or image</div>
+                <div class="text">This some subtext under an illustration or image</div>
+                <div class="text">This some subtext under an illustration or image</div>
+            </div>
+        -->
+        </div>
+    </div>
 </body>
 </html>
