Finsihed 2nd part of the website.

--- a/index.html
+++ b/index.html
@@ -34,24 +34,24 @@
         
         <div class="content">
             <div class="pics">
-                <img src="barberry.png" class="stock">
-                <img src="chilli.png" class="stock">
-                <img src="pepper.png" class="stock">
-                <img src="saffron.png" class="stock">
-                <div class="text">This some subtext under an illustration or image</div>
-                <div class="text">This some subtext under an illustration or image</div>
-                <div class="text">This some subtext under an illustration or image</div>
-                <div class="text">This some subtext under an illustration or image</div>
+                <div class="stock"><img src="barberry.png"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
             </div>
 
-       <!--
-            <div class="info">
-                <div class="text">This some subtext under an illustration or image</div>
-                <div class="text">This some subtext under an illustration or image</div>
-                <div class="text">This some subtext under an illustration or image</div>
-                <div class="text">This some subtext under an illustration or image</div>
+            <div class="pics">
+                <div class="stock"><img src="pepper.png"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
             </div>
-        -->
+
+            <div class="pics">
+                <div class="stock"><img src="chilli.png"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+
+            <div class="pics">
+                <div class="stock"><img src="saffron.png"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
         </div>
     </div>
 </body>
